--- a/main.ipynb
+++ b/main.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "56903f46",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,8 @@
     "    ax.set_yticks(np.arange(0, 1.01, 0.25))\n",
     "    ax.set_yticks(np.arange(0, 1.01, 0.125), minor=True)\n",
     "\n",
-    "plt.savefig(os.path.join(FIGURES_FOLDER, '1_single_cell_dnam.png'), dpi=300, bbox_inches='tight')"
+    "plt.savefig(os.path.join(FIGURES_FOLDER, '1_single_cell_dnam.png'), \n",
+    "            dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -619,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "284bcbbb",
    "metadata": {},
    "outputs": [
@@ -657,7 +658,8 @@
     "ax.set_ylabel('Number')\n",
     "ax.set_title('MESA monocytes age distribution')\n",
     "\n",
-    "plt.savefig(os.path.join(FIGURES_FOLDER, '2_mesa_mono_age_distr.png'), dpi=300, bbox_inches='tight')"
+    "plt.savefig(os.path.join(FIGURES_FOLDER, '2_mesa_mono_age_distr.png'), \n",
+    "            dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -699,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0a7b2ed8",
    "metadata": {},
    "outputs": [
@@ -756,7 +758,8 @@
     "\n",
     "plt.suptitle('AvgDNAm comparison for 353 Horvath CpGs')\n",
     "plt.tight_layout()\n",
-    "plt.savefig(os.path.join(FIGURES_FOLDER, '2_2_dnam_characteristics.png'), dpi=300, bbox_inches='tight')"
+    "plt.savefig(os.path.join(FIGURES_FOLDER, '2_2_dnam_characteristics.png'),\n",
+    "            dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -919,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "2ac10241",
    "metadata": {},
    "outputs": [],
@@ -928,11 +931,13 @@
     "dnams = [[] for _ in range(3)]\n",
     "for i in range(3):\n",
     "    # first step depends on avgDNAm(young)\n",
-    "    dnams[i].append(beta_c_next(effsize_c=effect_sizes, gamma=9.25, beta_c=young_dnam_avg, sigma=0.0005))\n",
+    "    dnams[i].append(beta_c_next(effsize_c=effect_sizes, gamma=9.25, \n",
+    "                                beta_c=young_dnam_avg, sigma=0.0005))\n",
     "\n",
     "    # next steps depend on previous states\n",
     "    for t in range(n_steps - 1):\n",
-    "        dnams[i].append(beta_c_next(effsize_c=effect_sizes, gamma=9.25, beta_c=dnams[i][-1], sigma=0.0005))"
+    "        dnams[i].append(beta_c_next(effsize_c=effect_sizes, gamma=9.25, \n",
+    "                                    beta_c=dnams[i][-1], sigma=0.0005))"
    ]
   },
   {
@@ -945,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4b142cc6",
    "metadata": {},
    "outputs": [
@@ -973,7 +978,8 @@
     "\n",
     "plt.suptitle('DNAm dynamics for three independent samples')\n",
     "plt.tight_layout()\n",
-    "plt.savefig(os.path.join(FIGURES_FOLDER, '3_simulation_random_chains.png'), dpi=300, bbox_inches='tight')"
+    "plt.savefig(os.path.join(FIGURES_FOLDER, '3_simulation_random_chains.png'), \n",
+    "            dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -1009,14 +1015,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "830d7f24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dnam_step_not_optimal = beta_c_next(effsize_c=effect_sizes, gamma=3, beta_c=young_dnam_avg, sigma=0.0001)\n",
+    "dnam_step_not_optimal = beta_c_next(effsize_c=effect_sizes, gamma=3, \n",
+    "                                    beta_c=young_dnam_avg, sigma=0.0001)\n",
     "for _ in range(n_steps):\n",
-    "    dnam_step_not_optimal = beta_c_next(effsize_c=effect_sizes, gamma=3, beta_c=dnam_step_not_optimal, sigma=0.0001)"
+    "    dnam_step_not_optimal = beta_c_next(effsize_c=effect_sizes, gamma=3, \n",
+    "                                        beta_c=dnam_step_not_optimal, sigma=0.0001)"
    ]
   },
   {
@@ -1052,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "a1b06925",
    "metadata": {},
    "outputs": [
@@ -1132,13 +1140,15 @@
     }
    ],
    "source": [
-    "scores = pd.read_csv(os.path.join(DATA_FOLDER, 'mae_res.tsv'), sep='\\t', names=['gamma', 'sigma', 'MAE'])\n",
+    "scores = pd.read_csv(os.path.join(DATA_FOLDER, 'mae_res.tsv'), \n",
+    "                    sep='\\t', \n",
+    "                    names=['gamma', 'sigma', 'MAE'])\n",
     "scores.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "bf36688e",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1183,8 @@
     "             ticks=[0.001, 0.05, 0.1],\n",
     "             label='MAE', location='right'\n",
     "            )\n",
-    "plt.savefig(os.path.join(FIGURES_FOLDER, '4_optimizing_parameters.png'), dpi=300, bbox_inches='tight')\n"
+    "plt.savefig(os.path.join(FIGURES_FOLDER, '4_optimizing_parameters.png'),\n",
+    "            dpi=300, bbox_inches='tight')\n"
    ]
   },
   {
@@ -1573,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "2b8c253d",
    "metadata": {},
    "outputs": [
@@ -1593,7 +1604,9 @@
     "fig, ax = plt.subplots(1, 2, figsize=(8,4))\n",
     "\n",
     "ax[0].plot(scores[:, 0], scores[:, 1], linewidth=2, color=colors[1])\n",
-    "ax[0].axvline(min_alpha, zorder=0, color=colors[-1],  linewidth=2, linestyle='dashed', label=f'$\\lambda^*=${min_alpha}')\n",
+    "ax[0].axvline(min_alpha, zorder=0, color=colors[-1],  \n",
+    "            linewidth=2, linestyle='dashed', \n",
+    "            label=f'$\\lambda^*=${min_alpha}')\n",
     "ax[0].set_xlabel('$\\lambda$')\n",
     "ax[0].set_ylabel('RMSE')\n",
     "ax[0].set_xticks(np.arange(0,1.01, 0.25))\n",
@@ -1608,8 +1621,10 @@
     "ax[1].scatter(y_validation, y_val_pred,  color=colors[-1], edgecolors=colors[-2], s=10, alpha=0.8)\n",
     "ax[1].set_xlabel('Simulated age')\n",
     "ax[1].set_ylabel('Predicted age')\n",
-    "ax[1].text(x= 0.05, y=0.85, s=f'$R$={(pearsonr(y_validation, y_val_pred)[0]):.5f}', transform=ax[1].transAxes)\n",
-    "ax[1].text(x= 0.05, y=0.9, s=f'RMSE={(mean_squared_error(y_validation, y_val_pred)):.3f}', transform=ax[1].transAxes)\n",
+    "ax[1].text(x= 0.05, y=0.85, s=f'$R$={(pearsonr(y_validation, y_val_pred)[0]):.5f}', \n",
+    "           transform=ax[1].transAxes)\n",
+    "ax[1].text(x= 0.05, y=0.9, s=f'RMSE={(mean_squared_error(y_validation, y_val_pred)):.3f}', \n",
+    "           transform=ax[1].transAxes)\n",
     "ax[1].set_xticks(np.arange(40, 91, 10))\n",
     "ax[1].set_yticks(np.arange(40, 91, 10))\n",
     "ax[1].set_xlim(40, 90)\n",
@@ -1648,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "47cb598a",
    "metadata": {},
    "outputs": [
@@ -1681,7 +1696,8 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot([0, 100], [0, 100], ls=\"--\", color=colors[-2], zorder=0)\n",
-    "ax.scatter(mesa_mono_y, mesa_mono_y_pred,  color=colors[-1], edgecolors=colors[-2], s=10, alpha=0.8)\n",
+    "ax.scatter(mesa_mono_y, mesa_mono_y_pred,  color=colors[-1], \n",
+    "           edgecolors=colors[-2], s=10, alpha=0.8)\n",
     "ax.set_xlabel('Real age')\n",
     "ax.set_ylabel('Predicted age')\n",
     "ax.text(x= 0.05, y=0.8, s=f'MAE={mesa_mono_mae:.3f}', transform=ax.transAxes)\n",
@@ -1763,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "9755d458",
    "metadata": {},
    "outputs": [
@@ -1801,9 +1817,12 @@
     "            )\n",
     "ax[0].set_xlabel('Real age')\n",
     "ax[0].set_ylabel('Predicted age (StocH)')\n",
-    "ax[0].text(x= 0.05, y=0.8, s=f'MAE={mesa_mono_mae:.3f}', transform=ax[0].transAxes)\n",
-    "ax[0].text(x= 0.05, y=0.9, s=f'$R$={mesa_mono_r[0]:.2f}', transform=ax[0].transAxes)\n",
-    "ax[0].text(x= 0.05, y=0.85, s=f'$P$={mesa_mono_r[1]:.1e}', transform=ax[0].transAxes)\n",
+    "ax[0].text(x= 0.05, y=0.8, s=f'MAE={mesa_mono_mae:.3f}',\n",
+    "           transform=ax[0].transAxes)\n",
+    "ax[0].text(x= 0.05, y=0.9, s=f'$R$={mesa_mono_r[0]:.2f}',\n",
+    "           transform=ax[0].transAxes)\n",
+    "ax[0].text(x= 0.05, y=0.85, s=f'$P$={mesa_mono_r[1]:.1e}',\n",
+    "           transform=ax[0].transAxes)\n",
     "ax[0].set_xticks(np.arange(0, 101, 25))\n",
     "ax[0].set_yticks(np.arange(0, 101, 25))\n",
     "ax[0].set_xlim(0, 100)\n",
@@ -1818,9 +1837,12 @@
     "            )\n",
     "ax[1].set_xlabel('Real age')\n",
     "ax[1].set_ylabel('Predicted age (Horvath)')\n",
-    "ax[1].text(x= 0.05, y=0.8, s=f'MAE={mesa_mono_mae:.3f}', transform=ax[1].transAxes)\n",
-    "ax[1].text(x= 0.05, y=0.9, s=f'$R$={mesa_mono_r_h[0]:.2f}', transform=ax[1].transAxes)\n",
-    "ax[1].text(x= 0.05, y=0.85, s=f'$P$={mesa_mono_r_h[1]:.1e}', transform=ax[1].transAxes)\n",
+    "ax[1].text(x= 0.05, y=0.8, s=f'MAE={mesa_mono_mae:.3f}',\n",
+    "           transform=ax[1].transAxes)\n",
+    "ax[1].text(x= 0.05, y=0.9, s=f'$R$={mesa_mono_r_h[0]:.2f}',\n",
+    "           transform=ax[1].transAxes)\n",
+    "ax[1].text(x= 0.05, y=0.85, s=f'$P$={mesa_mono_r_h[1]:.1e}', \n",
+    "           transform=ax[1].transAxes)\n",
     "ax[1].set_xticks(np.arange(0, 131, 25))\n",
     "ax[1].set_yticks(np.arange(0, 131, 25))\n",
     "ax[1].set_xlim(0, 125)\n",
@@ -1957,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "54861157",
    "metadata": {},
    "outputs": [
@@ -1973,9 +1995,16 @@
     }
    ],
    "source": [
-    "r_metrics = pd.DataFrame([[r**2, r_h**2, r**2 / r_h**2, mesa_mono_r[0]**2, mesa_mono_r_h[0]**2, rr2],\n",
-    "                          ['MESA CD4T', 'MESA CD4T', 'MESA CD4T', 'MESA Mono', 'MESA Mono', 'MESA Mono'],\n",
-    "                          ['R2 StocH', 'R2 Horvath', 'RR2', 'R2 StocH', 'R2 Horvath', 'RR2']]).T\n",
+    "r_metrics = pd.DataFrame(\n",
+    "    [\n",
+    "        [r**2, r_h**2, r**2 / r_h**2, \n",
+    "         mesa_mono_r[0]**2, mesa_mono_r_h[0]**2, rr2],\n",
+    "        ['MESA CD4T', 'MESA CD4T', 'MESA CD4T', \n",
+    "         'MESA Mono', 'MESA Mono', 'MESA Mono'],\n",
+    "        ['R2 StocH', 'R2 Horvath', 'RR2', \n",
+    "         'R2 StocH', 'R2 Horvath', 'RR2']\n",
+    "    ]\n",
+    "                           ).T\n",
     "r_metrics.columns = ['Score', 'Dataset', 'Metrics']\n",
     "\n",
     "fig, ax = plt.subplots()\n",
@@ -1985,7 +2014,8 @@
     "            edgecolor=colors[-2], ax=ax)\n",
     "\n",
     "plt.legend(frameon=False, loc='lower center', bbox_to_anchor=(0.5,-0.4))\n",
-    "plt.savefig(os.path.join(FIGURES_FOLDER, '9_r2_scores.png'), dpi=300, bbox_inches='tight')"
+    "plt.savefig(os.path.join(FIGURES_FOLDER, '9_r2_scores.png'), \n",
+    "             dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -2003,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "a6466ffa",
    "metadata": {},
    "outputs": [
@@ -2042,7 +2072,8 @@
     "\n",
     "plt.suptitle('DNAm dynamics for three independent samples, optimized parameters')\n",
     "plt.tight_layout()\n",
-    "plt.savefig(os.path.join(FIGURES_FOLDER, 'q_simulation_random_chains_params.png'), dpi=300, bbox_inches='tight')"
+    "plt.savefig(os.path.join(FIGURES_FOLDER, 'q_simulation_random_chains_params.png'), \n",
+    "            dpi=300, bbox_inches='tight')"
    ]
   },
   {
